--- a/style.css
+++ b/style.css
@@ -1,47 +1,299 @@
-.container {
-  max-width: 960px;
+/*Police importée pour le titre en vcersion mobile*/
+
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
+
+
+
+h6 {
+    color: #8C8A8C;
+    font-size: 19px;
 }
 
-/*
- * Custom translucent site header
- */
-
-.site-header {
-  background-color: #244F60;
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
-  opacity: 0.95;
-}
-.site-header a {
-  color: #999;
-  transition: ease-in-out color .15s;
-}
-.site-header a:hover {
-  color: #fff;
-  text-decoration: none;
+h3 {
+    font-weight: bold;
 }
 
+/*Titre principal de la page version DESKTOP */
 
-/*
- * Extra utilities
- */
-
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
-
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-
-.flex-equal > * {
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-  flex: 1;
+#titre {
+    font-size: 36px;
+    color: white;
+    padding: 30px 10px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 0 1px 4px rgba(48, 50, 58, .6);
 }
-@media (min-width: 768px) {
-  .flex-md-equal > * {
+
+/*Titre principal de la page version MOBILE */
+
+#titreMobile {
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-size: 1.125rem;
+    margin: 0;
+    font-weight: 600;
+    letter-spacing: .5px;
+    background-color: #292F4C;
+    padding: 20px 0;
+}
+
+#from {
+  border-top-left-radius : 20px:
+  border-top-right-radius: 20px;
+}
+
+
+/*Image de fond */
+
+#backgroundImage {
+    background-image: url(img/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+
+/*Style de du lien "Code de réduction"*/
+
+#codeReduc {
+    text-decoration: none;
+    color: #00CCA8;
+    font-size: 14px;
+}
+
+
+
+/*Style des photos des tuiles*/
+
+.photos {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+
+/*Style de la carte de droite "Les petits plus de Trainline"*/
+
+.card-header {
+    background-color: #293352;
+    font-size: 19px;
+    color: white;
+    font-weight: bold;
+}
+
+.card-title {
+    color: #00CCA8;
+}
+
+.card-text {
+    color: #293352;
+}
+
+.card-body img {
+
+    width: 40px;
+}
+
+
+
+
+/*Logos carte*/
+
+.rond {
+
+    background-color: #293352;
+    width: 55px;
+    height: 55px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+
+/*Position du logo de la marque*/
+
+.navbar-brand {
+    position: absolute;
+    left: 120px;
+    top: 5px;
+    text-align: center;
+}
+
+
+
+
+
+
+
+/*Positionnement du conteneur "Paiement et Billet"*/
+
+#containerTicket {
+    float: left;
+    display: inline-block;
+    display: table-cell;
+}
+
+/*Arrière plan Squared Metal de Subtle Pattern*/
+
+#ticket {
+    background-image: url(img/design/squared_metal.png);
+    background-repeat: repeat;
+}
+
+
+/*Suppression des marges */
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+
+/*Style du conteneur "Découvrir l'Europe en train"*/
+
+#container-globe {
+
+    background-color: #292F4C;
+    color: white;
+}
+
+#globe {
+    max-width: 120px !important;
+}
+
+.bg-dark {
+    background-color: #214C5F !important;
+    opacity: 70% !important;
+}
+
+@media (max-width: 768px) {
+.bg-dark {
+    background-color: #292F4C !important;
+    opacity: 70% !important;
+}
+}
+
+
+
+/*.flex-equal>* {
     -ms-flex: 1;
     -webkit-box-flex: 1;
     flex: 1;
-  }
 }
 
-.overflow-hidden { overflow: hidden; }
+@media (min-width: 768px) {
+    .flex-md-equal>* {
+        -ms-flex: 1;
+        -webkit-box-flex: 1;
+        flex: 1;
+    }
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+*/
+
+
+/*Position du texte des tuiles - version Desktop*/
+
+#center {
+    margin: auto 0;
+}
+
+
+
+/*Style des boutons bleus*/
+
+.bouton {
+
+    background-color: #01C3A7;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    font-weight: bold;
+}
+
+.bouton:hover {
+
+    background-color: #01907c;
+}
+
+
+/*Stye du bouton télécharger l'application*/
+
+#appliButton {
+    background-color: #13181A;
+    color: white;
+    border: none;
+}
+
+
+
+/*Bouton Aide en lettre*/
+
+#aide {
+    color: white;
+    text-transform: uppercase;
+
+    text-decoration: none;
+    font-weight: bold;
+}
+
+
+/*Bouton Choix des langue*/
+
+#flag {
+    width: 3%;
+    border-radius: 7px;
+    padding: 2px;
+    background-color: white;
+}
+
+#flag:hover {
+    border: solid #2A2E4F 5px;
+}
+
+
+/*Bouton des devises*/
+
+#devise {
+    box-sizing: border-box;
+    background-color: #214C5F;
+    border: solid white 2px;
+    border-radius: 7px;
+}
+
+#devise:hover {
+    border: solid #2A2E4F 3px;
+}
+
+
+/*Partie Moyen de paiement et billet - comment ça marche*/
+
+#paiement {
+
+    vertical-align: center;
+}
+
+
+/*Style du bouton "Réserver un billet"*/
+
+#Reserver {
+
+    background-color: #45578A;
+    color: white;
+    padding: 20px 0;
+}
+
+#Reserver h6 {
+
+    color: white;
+}
